--- a/TwitterManabiTool/TwitterManabiTool.csproj
+++ b/TwitterManabiTool/TwitterManabiTool.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="CoreTweet" Version="1.0.0.483" />
+    <PackageReference Include="DynamicJson" Version="1.2.0" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
